force-app/main/default/objects/Test012022015234955__c/Test012022015234955__c.object-meta.xml
<CustomObject>
    <description>dsacsaccsac</description>
    <label>TestObject</label>
    <nameField>
        <label>Test Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>