force-app/main/default/objects/Test012022015234955__c/fields/Test25312022015234955__c.field-meta.xml
<CustomField>
    <fullName>Test25312022015234955__c</fullName>
    <label>TestField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>