force-app/main/default/objects/Test012022015234955__c/recordTypes/Test012022015234955.recordType-meta.xml
<RecordType>
    <active>false</active>
    <fullName>Test012022015234955</fullName>
    <label>Test012022015234955</label>
</RecordType>